--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Eibelstadt</title>
-  <base href="/">
+  <head>
+    <meta charset="utf-8" />
+    <title>Eibelstadt</title>
+    <base href="/" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <eb-root></eb-root>
-</body>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <script src="/assets/elements/message-input.js"></script>
+  </head>
+  <body>
+    <eb-root></eb-root>
+  </body>
 </html>
